fixed spacing after  blocks, added link to HttpClient 3

--- a/stylesheets/betamax.less
+++ b/stylesheets/betamax.less
@@ -200,7 +200,7 @@ footer {
 
 // code blocks
 pre {
-	margin-bottom: @spacing;
+	margin-bottom: 2 * @spacing;
 	
 	&.prettyprint {
 		.code-box;
